●接上後端資料庫

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="腹膜透析病人健康紀錄與監測平台 - 協助病患記錄透析資訊並由個案管理師監控" />
+    <meta name="description" content="腹膜透析病人健康紀錄與監測平台 - 協助病人記錄透析資訊並由個案管理師監控" />
     <title>腹膜透析監測平台</title>
   </head>
   <body>
